--- a/miniprogram/pages/lessons/lessons.wxss
+++ b/miniprogram/pages/lessons/lessons.wxss
@@ -99,6 +99,12 @@
   align-items: center;
 }
 
+.icccc{
+  position:absolute;
+  left:580rpx;
+  top:930rpx;
+}
+
 .layout_horizontal{
   height: 100rpx;
   width: 82%;
