--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -1,7 +1,29 @@
-
-
 <van-tabbar active="{{ active }}" bind:change="onChange">
   <van-tabbar-item name="lesson" icon="clock-o">课程</van-tabbar-item>
   <van-tabbar-item name="todo" icon="todo-list-o">备忘</van-tabbar-item>
-  <van-tabbar-item name="my" icon="friends-o">我的</van-tabbar-item>
+  <van-tabbar-item name="my" icon="setting-o">设置</van-tabbar-item>
 </van-tabbar>
+
+<view style="flex-direction:column;">
+  <image mode="widthFix" class="todoim" src="./setting.png"></image>
+</view>
+
+<!--van-switch-cell
+  title="样式切换"
+/-->
+<text>样式切换</text>
+<van-checkbox-group value="{{ result }}" bind:change="onCChange">
+  <van-cell-group >
+    <van-cell
+      wx:for="{{ list }}"
+      wx:key="index"
+      title="{{ item }}"
+      value-class="value-class"
+      clickable
+      data-index="{{ index }}"
+      bind:click="toggle"
+    >
+      <van-checkbox catch:tap="noop" class="checkboxes-{{ index }}" name="{{ item }}" />
+    </van-cell>
+  </van-cell-group>
+</van-checkbox-group>
