--- a/miniprogram/pages/todo/todo.wxml
+++ b/miniprogram/pages/todo/todo.wxml
@@ -1,5 +1,16 @@
 <van-tabbar active="{{ active }}" bind:change="onChange">
   <van-tabbar-item name="lesson" icon="clock-o">课程</van-tabbar-item>
   <van-tabbar-item name="todo" icon="todo-list-o">备忘</van-tabbar-item>
-  <van-tabbar-item name="my" icon="friends-o">我的</van-tabbar-item>
+  <van-tabbar-item name="my" icon="setting-o">设置</van-tabbar-item>
 </van-tabbar>
+
+<view style="flex-direction:column;">
+  <image mode="widthFix" class="todoim" src="./todo.png"></image>
+</view>
+
+<van-swipe-cell id="swipe-cell" right-width="{{ 65 }}" left-width="{{ 65 }}" async-close bind:close="onCellClose">
+  <van-cell-group>
+    <van-cell title="待办事项"/>
+  </van-cell-group>
+  <view slot="right">删除</view>
+</van-swipe-cell>
