--- a/miniprogram/pages/firstlaunch/index.wxml
+++ b/miniprogram/pages/firstlaunch/index.wxml
@@ -24,5 +24,5 @@
     <view class='blank20'></view>
     <!--button class='fstbtn' open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo"  hover-class='fstbtn.active'>获取用户信息</button-->
     <view class='blank5'></view>
-        <button class='fstbtn' bindtap='next' hover-class='fstbtn.active'>下一步</button>
+        <button class='fstbtn' bindtap='next' hover-class='fstbtn.active'>填写信息</button>
   </view>
