--- a/miniprogram/pages/lessons/lessons.wxml
+++ b/miniprogram/pages/lessons/lessons.wxml
@@ -1,6 +1,6 @@
 <van-tabbar active="{{ active }}" bind:change="onChange">
   <van-tabbar-item name="lesson" icon="clock-o">课程</van-tabbar-item>
-  <van-tabbar-item name="todo" icon="todo-list-o">备忘</van-tabbar-item>
+  <van-tabbar-item name="todo" icon="eye-o">发现</van-tabbar-item>
   <van-tabbar-item name="my" icon="setting-o">设置</van-tabbar-item>
 </van-tabbar>
 
