--- a/miniprogram/pages/my/my.wxml
+++ b/miniprogram/pages/my/my.wxml
@@ -1,6 +1,6 @@
 <van-tabbar active="{{ active }}" bind:change="onChange">
   <van-tabbar-item name="lesson" icon="clock-o">课程</van-tabbar-item>
-  <van-tabbar-item name="todo" icon="todo-list-o">备忘</van-tabbar-item>
+  <van-tabbar-item name="todo" icon="eye-o">发现</van-tabbar-item>
   <van-tabbar-item name="my" icon="setting-o">设置</van-tabbar-item>
 </van-tabbar>
 
@@ -11,8 +11,16 @@
 <!--van-switch-cell
   title="样式切换"
 /-->
-<text>样式切换</text>
-<van-checkbox-group value="{{ result }}" bind:change="onCChange">
+<van-cell-group title="个人信息">
+  <van-cell title="学号" value="{{id}}" />
+  <van-cell title="年级" value="{{grade}}" border="true" />
+  <van-cell title="学院" value="{{college}}" />
+  <view class="container">
+    <button class="butttt" bindtap="editProfile">编辑资料</button>
+  </view>
+</van-cell-group>
+
+<!--van-checkbox-group value="{{ result }}" bind:change="onCChange">
   <van-cell-group >
     <van-cell
       wx:for="{{ list }}"
@@ -26,4 +34,6 @@
       <van-checkbox catch:tap="noop" class="checkboxes-{{ index }}" name="{{ item }}" />
     </van-cell>
   </van-cell-group>
-</van-checkbox-group>
+</van-checkbox-group-->
+
+
