--- a/miniprogram/pages/navi/navi.wxss
+++ b/miniprogram/pages/navi/navi.wxss
@@ -10,8 +10,18 @@
 }
 
 .logo{
+  justify-content: center; 
   position:center;
   width:50%;
-  text-align:center;
-  align-items: center;
 }
+
+.imagesize{
+ display:flex;
+ height: 100%;
+ justify-content: center;
+ align-items:center;
+}
+.imagesize image { 
+  width:400rpx;
+  height:400rpx;
+  }
